# expense_approval_system

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  api-design.md  backend-architecture.md  coding-rules.md  database-schema.md  docker-compose.yml  product-requirements.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260619_0001_create_users_table.py  20260622_0002_create_expense_core_tables.py  20260622_0003_create_approval_and_payment_tables.py
app/: cli.py  main.py
app/api/: deps.py
app/api/routes/: __init__.py  auth.py  expenses.py  users.py
app/core/: config.py  errors.py  security.py
app/db/: session.py
app/models/: __init__.py  approval_decision.py  audit_log.py  expense.py  expense_receipt.py  payment.py  user.py
app/repositories/: __init__.py  approval_decisions.py  audit_logs.py  expense_receipts.py  expenses.py  payments.py  users.py
app/schemas/: __init__.py  auth.py  expense.py  user.py
app/services/: __init__.py  auth.py  bootstrap.py  expenses.py  users.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: backend.md
conductor/tracks/track-001-project-scaffold/: implementation-notes.md  metadata.json  plan.md  spec.md
conductor/tracks/track-002-auth-users/: metadata.json  plan.md  spec.md
conductor/tracks/track-003-expense-core/: metadata.json  plan.md  spec.md
conductor/tracks/track-004-manager-approval/: metadata.json  plan.md  spec.md
tests/: conftest.py  test_auth_users.py  test_expenses.py  test_health.py
(+9 files in other folders)
